--- a/BecodeCE/style.css
+++ b/BecodeCE/style.css
@@ -1,94 +1,96 @@
-body{
-    height: 500px; /*Max height = 600 px*/
-    width: 700px;  /*Max width = 800 px*/
-    background-color: #245060;
-    font-family: 'Raleway', sans-serif;
+body {
+  height: 500px; /*Max height = 600 px*/
+  width: 700px; /*Max width = 800 px*/
+  background-color: #245060;
+  font-family: "Raleway", sans-serif;
 }
-   
-.header{
-    margin-left: 204.5px;
+
+.header {
+  margin-left: 204.5px;
 }
 
 *,
 *:after,
 *::before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 nav a {
-	position: relative;
-	display: inline-block;
-	margin: 15px 25px;
-	outline: none;
-	color: #fff;
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 400;
-	text-shadow: 0 0 1px rgba(255,255,255,0.3);
-	font-size: 1.35em;
+  position: relative;
+  display: inline-block;
+  margin: 15px 25px;
+  outline: none;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 400;
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+  font-size: 1.35em;
 }
 
 nav a:hover,
 nav a:focus {
-	outline: none;
+  outline: none;
 }
 
 .cl-effect-1 a::before,
 .cl-effect-1 a::after {
-	display: inline-block;
-	opacity: 0;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
-	transition: transform 0.3s, opacity 0.2s;
+  display: inline-block;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+  -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+  transition: transform 0.3s, opacity 0.2s;
 }
 
 .cl-effect-1 a::before {
-	margin-right: 10px;
-	content: '[';
-	-webkit-transform: translateX(20px);
-	-moz-transform: translateX(20px);
-	transform: translateX(20px);
+  margin-right: 10px;
+  content: "[";
+  -webkit-transform: translateX(20px);
+  -moz-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 .cl-effect-1 a::after {
-	margin-left: 10px;
-	content: ']';
-	-webkit-transform: translateX(-20px);
-	-moz-transform: translateX(-20px);
-	transform: translateX(-20px);
+  margin-left: 10px;
+  content: "]";
+  -webkit-transform: translateX(-20px);
+  -moz-transform: translateX(-20px);
+  transform: translateX(-20px);
 }
 
 .cl-effect-1 a:hover::before,
 .cl-effect-1 a:hover::after,
 .cl-effect-1 a:focus::before,
 .cl-effect-1 a:focus::after {
-	opacity: 1;
-	-webkit-transform: translateX(0px);
-	-moz-transform: translateX(0px);
-	transform: translateX(0px);
+  opacity: 1;
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px);
 }
 
 #menu {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .container > section {
-	margin: 0 auto;
-	padding: 5em 3em;
-    text-align: center;
+  margin: 0 auto;
+  padding: 5em 3em;
+  text-align: center;
 }
 
 .color-1 {
-	background: #435a6b;
+  background: #435a6b;
 }
 
 @media screen and (max-width: 25em) {
+  .codrops-icon span {
+    display: none;
+  }
+}
 
-	.codrops-icon span {
-		display: none;
-	}
-
+.error-message {
+  display: none;
 }
