display today's watch

--- a/BecodeCE/style.css
+++ b/BecodeCE/style.css
@@ -92,3 +92,43 @@ nav a:focus {
 	}
 
 }
+
+.watch_infos {
+	position: relative;
+	display: inline-block;
+	margin: 15px 25px;
+	outline: none;
+	color: #fff;
+	text-decoration: none;
+	letter-spacing: 1px;
+	font-weight: 400;
+	text-shadow: 0 0 1px rgba(255,255,255,0.3);
+	font-size: 1.35em;
+	background: #435a6b;
+}
+
+
+a.button1{
+	display:inline-block;
+	padding:0.35em 1.2em;
+	border:0.1em solid #FFFFFF;
+	margin:0 0.3em 0.3em 0;
+	border-radius:0.12em;
+	box-sizing: border-box;
+	text-decoration:none;
+	font-family:'Roboto',sans-serif;
+	font-weight:300;
+	color:#FFFFFF;
+	text-align:center;
+	transition: all 0.2s;
+	}
+	a.button1:hover{
+	color:#000000;
+	background-color:#FFFFFF;
+	}
+	@media all and (max-width:30em){
+	 a.button1{
+	display:block;
+	margin:0.4em auto;
+	 }
+	}
